--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jquery": "^3.3.38",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-toastr": "^12.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
