--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "@angular/typescript": "^2.0.0-5d0e199",
     "@types/jquery": "^3.3.38",
+    "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ngx-bootstrap": "^5.6.1",
     "ngx-toastr": "^12.0.1",
